--- a/style.css
+++ b/style.css
@@ -33,9 +33,36 @@ img {
 
 .button {
   cursor: pointer;
+  border: none;
+  color: #fff;
   width: 150px;
   height: 40px;
-  box-shadow: 0 0 10px rgba(0,0,0,0.5);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  background-color: #3E64FF;
+  position: relative;
+  overflow: hidden;
+}
+
+.button .flare {
+  position: absolute;
+  top: 0;
+  height: 100%;
+  width: 45px;
+  transform: skewX(-45deg);
+  animation: flareAnimation;
+  left: -150%;
+  background: linear-gradient(90deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.4));
+  animation: flareAnimation 3s infinite linear;
+}
+
+@keyframes flareAnimation {
+  0% {
+    left: -150%;
+  }
+
+  100% {
+    left: 150%;
+  }
 }
 
 .modal {
@@ -49,7 +76,7 @@ img {
   height: 100%;
   left: 0;
   top: 0;
-  background-color: rgba(0,0,0,.8);
+  background-color: rgba(0, 0, 0, .8);
   position: fixed;
   padding-top: 80px;
 }
